--- a/index.html
+++ b/index.html
@@ -494,6 +494,25 @@ const juegos = [
     youtube: "https://www.youtube.com/watch?v=4v5f7B1yO1g" // Video de gameplay oficial
   }
 ];
+    {
+    titulo: "DEAD ISLAND",
+    imagen: "https://img.goodfon.com/wallpaper/nbig/b/ce/dead-island-definitive.webp",
+    ano: 2011,
+    tamano: "5 GB",
+    genero: "ACCIÓN/AVENTURA/SUPERVIENCIA",
+    version: "FULL GAME",
+    minimo: "Win XP, 1GB RAM,Core 2 Duo 2.66 GHz processor,GeForce 8600GT",
+    recomendado: "Win 7, Core 2 Duo 2.66 GHz,4GB RAM,GeForce 9600 ",
+    enlaces: [
+      { nombre: "GOFILE", url: "https://www.mediafire.com/file/k3vvcd0ppop9bu0" },
+      { nombre: "REVIEW", url: "https://www.youtube.com/watch?v=usuario" },
+    ],
+    generos: ["action", "adventure"],
+    review: "The Last of Us es una obra maestra narrativa que combina acción intensa con una historia emocionalmente impactante.",
+    youtube: "https://www.youtube.com/watch?v=videojuego"
+  }
+  // Puedes seguir añadiendo más juegos aquí...
+];
 
     function renderGames(juegosFiltrados) {
       const gallery = document.getElementById('gameGallery');
@@ -563,4 +582,5 @@ const juegos = [
     renderGames(juegos);
   </script>
 </body>
+
 </html>
