--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ const juegos = [
   // ✅ NUEVO JUEGO AGREGADO: DEAD ISLAND 1
   {
     titulo: "DEAD ISLAND",
-    imagen: "https://cdn.akamai.steamstatic.com/steam/apps/21140/header.jpg?t=1629212105", // Imagen oficial de Steam
+    imagen: "https://wallpapercave.com/wp/wp2991025.jpg", // Imagen oficial de Steam
     ano: 2011,
     tamano: "5.5 GB",
     genero: "ACCION / RPG / HORROR",
@@ -581,4 +581,5 @@ const juegos = [
 </body>
 
 </html>
+
 
