--- a/index.html
+++ b/index.html
@@ -489,13 +489,14 @@ const juegos = [
       { nombre: "REVIEW", url: "https://www.youtube.com/watch?v=wHuGSDixewk" },
     ],
     generos: ["action", "horror"],
+    // ✅ BOTÓN DE REVIEW Y VIDEO DE YOUTUBE
     review: "Resident Evil 4 es un clásico del survival horror que revolucionó la franquicia con su innovador sistema de combate y atmósfera tensa.",
-    youtube: "https://www.youtube.com/watch?v=4v5f7B1yO1g"
+    youtube: "https://www.youtube.com/watch?v=4v5f7B1yO1g" // Video de gameplay oficial
   },
-  // ✅ NUEVO JUEGO AGREGADO: DEAD ISLAND 1
+  // ✅ NUEVO JUEGO AGREGADO: DEAD ISLAND
   {
     titulo: "DEAD ISLAND",
-    imagen: "https://wallpapercave.com/wp/wp2991025.jpg", // Imagen oficial de Steam
+    imagen: "https://cdn.akamai.steamstatic.com/steam/apps/21140/header.jpg?t=1629212105", // Imagen oficial de Steam
     ano: 2011,
     tamano: "5.5 GB",
     genero: "ACCION / RPG / HORROR",
@@ -581,5 +582,6 @@ const juegos = [
 </body>
 
 </html>
+
 
 
