--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ const juegos = [
   // ✅ NUEVO JUEGO AGREGADO: DEAD ISLAND
   {
     titulo: "DEAD ISLAND",
-    imagen: "https://static.wikia.nocookie.net/deadisland/images/8/84/103161.jpg/revision/latest/scale-to-width-down/1000?cb=20110806215747", // Imagen oficial de Steam
+    imagen: "https://upload.wikimedia.org/wikipedia/en/thumb/4/46/Xian_Mei_Axe.jpg/250px-Xian_Mei_Axe.jpg", // Imagen oficial de Steam
     ano: 2011,
     tamano: "5.5 GB",
     genero: "ACCION / RPG / HORROR",
@@ -582,6 +582,7 @@ const juegos = [
 </body>
 
 </html>
+
 
 
 
