Actualizaci├│n autom├ítica con nuevos juegos

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             <h2>¿Necesitas ayuda?</h2>
             <p>Contáctanos si tienes problemas con una descarga o reportar un error.</p>
             <!-- Formulario corregido: method="POST" y sin espacios en el action -->
-            <form action="https://formspree.io/f/mpwlozqz" method="POST" enctype="multipart/form-data">
-                <div class="form-group">
-                    <label for="email">Tu Correo</label>
-                    <input type="email" name="Correo" id="email" placeholder="tu@correo.com" required>
-                </div>
+<form action="https://formspree.io/f/mpwlozqz" method="POST">
+    <div class="form-group">
+        <label for="email">Tu Correo</label>
+        <input type="email" name="Correo" id="email" placeholder="tu@correo.com" required>
+    </div>
 
-                <div class="form-group">
-                    <label for="mensaje">Mensaje</label>
-                    <textarea name="Mensaje" id="mensaje" rows="5" placeholder="Escribe tu mensaje..." required></textarea>
-                </div>
+    <div class="form-group">
+        <label for="mensaje">Mensaje</label>
+        <textarea name="Mensaje" id="mensaje" rows="5" placeholder="Escribe tu mensaje..." required></textarea>
+    </div>
 
-                <button type="submit">Enviar mensaje ✉️</button>
-            </form>
+    <button type="submit">Enviar mensaje ✉️</button>
+</form>
         </section>
     </main>
 
