--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+
     <header>
         <h1>GamesFullZ</h1>
         <div class="search-container">
@@ -32,20 +33,17 @@
         <section class="contact-section">
             <h2>¿Necesitas ayuda?</h2>
             <p>Contáctanos si tienes problemas con una descarga o reportar un error.</p>
-            <!-- Formulario corregido: method="POST" y sin espacios en el action -->
-<form action="https://formspree.io/f/mpwlozqz" method="POST">
-    <div class="form-group">
-        <label for="email">Tu Correo</label>
-        <input type="email" name="Correo" id="email" placeholder="tu@correo.com" required>
-    </div>
-
-    <div class="form-group">
-        <label for="mensaje">Mensaje</label>
-        <textarea name="Mensaje" id="mensaje" rows="5" placeholder="Escribe tu mensaje..." required></textarea>
-    </div>
-
-    <button type="submit">Enviar mensaje ✉️</button>
-</form>
+            <form action="https://formspree.io/f/mpwlozqz" method="POST">
+                <div class="form-group">
+                    <label for="email">Tu Correo</label>
+                    <input type="email" name="Correo" id="email" placeholder="tu@correo.com" required>
+                </div>
+                <div class="form-group">
+                    <label for="mensaje">Mensaje</label>
+                    <textarea name="Mensaje" id="mensaje" rows="5" placeholder="Escribe tu mensaje..." required></textarea>
+                </div>
+                <button type="submit">Enviar mensaje ✉️</button>
+            </form>
         </section>
     </main>
 
@@ -57,37 +55,26 @@
                 <img id="modalImage" src="" alt="Portada del juego">
                 <div class="modal-info">
                     <h2 id="modalTitle">Título del juego</h2>
-
-                    <!-- Estrellas y descargas -->
                     <div class="rating-downloads">
                         <div class="rating" id="modalRating">⭐⭐⭐⭐☆</div>
                         <div class="downloads" id="modalDownloads">Descargado por +5,300 usuarios</div>
                     </div>
-
                     <p id="modalInfo">Descripción del juego.</p>
-
                     <div class="requirements">
                         <h3>Requisitos mínimos</h3>
                         <p id="modalRequirements">Procesador: ...</p>
                     </div>
-
-                    <!-- Opciones de descarga con íconos -->
                     <div class="download-options">
                         <h3>Descargar desde:</h3>
                         <div class="links">
-                            <!-- ID corregido: debe ser "linkGofile" para coincidir con script.js -->
                             <a href="#" id="linkGofile" target="_blank" class="download-link gofile">
                                 <i class="fas fa-cloud"></i> Gofile
                             </a>
                         </div>
                     </div>
-
-                    <!-- Comentarios -->
                     <div class="comments-section">
                         <h3>Reseñas de usuarios</h3>
-                        <div id="commentsContainer" class="comments-list">
-                            <!-- Comentarios se cargarán aquí -->
-                        </div>
+                        <div id="commentsContainer" class="comments-list"></div>
                         <div class="add-comment">
                             <textarea placeholder="Escribe tu opinión..." rows="3" id="commentInput"></textarea>
                             <button id="addCommentBtn">Publicar</button>
@@ -98,8 +85,203 @@
         </div>
     </div>
 
-    <!-- Asegúrate de cargar data.js ANTES que script.js -->
+    <!-- ==================== BOTÓN Y MODAL DE MODO NOVATO ==================== -->
+    <button id="btnNovato" class="btn-novato">🎮 Soy nuevo</button>
+
+    <div id="tutorialModal" class="tutorial-modal">
+        <div class="tutorial-content">
+            <span class="tutorial-close">&times;</span>
+            <h2>🎮 Guía para Principiantes</h2>
+            <div class="tutorial-steps" id="tutorialSteps">
+                <!-- Se llenará con JavaScript -->
+            </div>
+        </div>
+    </div>
+
+    <!-- ==================== CAJA DE RECOMENDACIONES DE HARDWARE ==================== -->
+    <div id="recomendacionBox" class="recomendacion-box">
+        <span class="close-rec">&times;</span>
+        <p id="recomendacionText">Analizando tu PC...</p>
+        <div id="juegosRecomendados" class="juegos-rec"></div>
+    </div>
+
+    <!-- Carga de datos y scripts -->
     <script src="data.js"></script>
+    <script>
+        // ================================
+        // 1. DETECTOR DE HARDWARE Y RECOMENDACIONES
+        // ================================
+        document.addEventListener('DOMContentLoaded', function () {
+            const recomendacionBox = document.getElementById('recomendacionBox');
+            const recomendacionText = document.getElementById('recomendacionText');
+            const juegosRecomendados = document.getElementById('juegosRecomendados');
+
+            // Detectar GPU usando WebGL
+            function detectarGPU() {
+                const canvas = document.createElement('canvas');
+                const gl = canvas.getContext?.('webgl') || canvas.getContext?.('experimental-webgl');
+                if (!gl) return 'GPU no detectada';
+
+                const debugInfo = gl.getExtension('WEBGL_debug_renderer_info');
+                if (debugInfo) {
+                    return gl.getParameter(debugInfo.UNMASKED_RENDERER_WEBGL);
+                }
+                return 'GPU integrada o desconocida';
+            }
+
+            // Detectar RAM (estimada)
+            function detectarRAM() {
+                return navigator.deviceMemory || 4; // 4 GB por defecto
+            }
+
+            // Detectar SO
+            function detectarSO() {
+                const ua = navigator.userAgent;
+                if (ua.includes('Win')) return 'Windows';
+                if (ua.includes('Mac')) return 'macOS';
+                if (ua.includes('Linux')) return 'Linux';
+                if (ua.includes('Android')) return 'Android';
+                if (ua.includes('like Mac')) return 'iOS';
+                return 'Desconocido';
+            }
+
+            // Analizar y recomendar juegos
+            function recomendarJuegos() {
+                const gpu = detectarGPU();
+                const ram = detectarRAM();
+                const so = detectarSO();
+
+                console.log('Hardware detectado:', { gpu, ram, so });
+
+                // Estimación de nivel de rendimiento
+                let nivel = 'bajo';
+                if (ram >= 8 && (gpu.includes('GeForce') || gpu.includes('Radeon') || gpu.includes('RTX'))) {
+                    nivel = 'alto';
+                } else if (ram >= 6) {
+                    nivel = 'medio';
+                }
+
+                // Filtrar juegos según nivel
+                let recomendados = recursos.filter(juego => {
+                    const req = juego.requisitos.toLowerCase();
+                    if (nivel === 'alto') return true;
+                    if (nivel === 'medio') return !req.includes('rtx') && !req.includes('gtx 10');
+                    if (nivel === 'bajo') return req.includes('intel hd') || req.includes('integrada');
+                });
+
+                // Limitar a 3 juegos
+                recomendados = recomendados.slice(0, 3);
+
+                // Mostrar mensaje
+                recomendacionText.innerHTML = `
+                    <strong>Tu PC:</strong> ${ram} GB RAM, ${so}<br>
+                    <strong>GPU:</strong> ${gpu.substring(0, 50)}...
+                `;
+
+                // Mostrar juegos recomendados
+                juegosRecomendados.innerHTML = '';
+                if (recomendados.length > 0) {
+                    recomendados.forEach(juego => {
+                        const img = document.createElement('img');
+                        img.src = juego.imagen;
+                        img.alt = juego.nombre;
+                        img.title = juego.nombre;
+                        juegosRecomendados.appendChild(img);
+                    });
+                } else {
+                    juegosRecomendados.innerHTML = '<p style="color:#aaa">No hay juegos recomendados aún.</p>';
+                }
+            }
+
+            // Mostrar recomendaciones después de 2 segundos
+            setTimeout(() => {
+                recomendarJuegos();
+            }, 2000);
+
+            // Cerrar recomendación
+            document.querySelector('.close-rec').addEventListener('click', () => {
+                recomendacionBox.style.display = 'none';
+            });
+
+            // ================================
+            // 2. MODO NOVATO - TUTORIAL PASO A PASO
+            // ================================
+            const btnNovato = document.getElementById('btnNovato');
+            const tutorialModal = document.getElementById('tutorialModal');
+            const tutorialClose = document.querySelector('.tutorial-close');
+            const tutorialSteps = document.getElementById('tutorialSteps');
+
+            // Definir pasos del tutorial
+            const pasos = [
+                {
+                    icon: 'fas fa-download',
+                    title: '1. Cómo descargar',
+                    text: 'Haz clic en "Gofile" y luego en "Download" en la página que se abre.'
+                },
+                {
+                    icon: 'fas fa-file-archive',
+                    title: '2. Descomprimir archivos',
+                    text: 'Usa WinRAR o 7-Zip para extraer el archivo .zip o .rar al escritorio.'
+                },
+                {
+                    icon: 'fas fa-cog',
+                    title: '3. Instalar el juego',
+                    text: 'Entra a la carpeta descomprimida y ejecuta "setup.exe" o "install.exe".'
+                },
+                {
+                    icon: 'fas fa-lock-open',
+                    title: '4. Si pide crack',
+                    text: 'Copia los archivos de la carpeta "Crack" y pégalo en la carpeta del juego.'
+                },
+                {
+                    icon: 'fas fa-play-circle',
+                    title: '5. ¡Juega!',
+                    text: 'Ejecuta el juego desde el acceso directo o la carpeta de instalación.'
+                }
+            ];
+
+            // Crear pasos en el modal
+            pasos.forEach((paso, index) => {
+                const step = document.createElement('div');
+                step.className = 'step';
+                step.innerHTML = `
+                    <h3><i class="${paso.icon}"></i> ${paso.title}</h3>
+                    <p>${paso.text}</p>
+                `;
+                tutorialSteps.appendChild(step);
+            });
+
+            // Mostrar tutorial con animación
+            btnNovato.addEventListener('click', () => {
+                tutorialModal.style.display = 'block';
+                const steps = tutorialSteps.querySelectorAll('.step');
+                steps.forEach((step, i) => {
+                    setTimeout(() => {
+                        step.classList.add('active');
+                    }, i * 300);
+                });
+            });
+
+            // Cerrar tutorial
+            tutorialClose.addEventListener('click', () => {
+                tutorialModal.style.display = 'none';
+                // Resetear animaciones
+                tutorialSteps.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
+            });
+
+            // Cerrar al hacer clic fuera
+            window.addEventListener('click', (e) => {
+                if (e.target === tutorialModal) {
+                    tutorialModal.style.display = 'none';
+                    tutorialSteps.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
+                }
+            });
+
+            // ================================
+            // Cargar script.js después
+            // ================================
+        });
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
