Actualización automática con nuevos juegos

--- a/index.html
+++ b/index.html
@@ -226,17 +226,7 @@
                 {
                     icon: 'fas fa-cog',
                     title: '3. Instalar el juego',
-                    text: 'Entra a la carpeta descomprimida y ejecuta "setup.exe" o "install.exe".'
-                },
-                {
-                    icon: 'fas fa-lock-open',
-                    title: '4. Si pide crack',
-                    text: 'Copia los archivos de la carpeta "Crack" y pégalo en la carpeta del juego.'
-                },
-                {
-                    icon: 'fas fa-play-circle',
-                    title: '5. ¡Juega!',
-                    text: 'Ejecuta el juego desde el acceso directo o la carpeta de instalación.'
+                    text: 'Entra a la carpeta descomprimida y ejecuta El juego y listo'
                 }
             ];
 
