--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         
         <!-- ==================== NOTA DE AGRADECIMIENTO ==================== -->
         <div style="text-align: center; margin: 40px 0; padding: 20px; font-size: 18px; color: #00ffcc;">
-            <p>🎮 ¡Gracias por apoyar la weba, amigo! 🎮</p>
-        </div>
+            <p>🎮 ¡Gracias por apoyar la web, amigo! La Contraseña ES 123🎮</p>
+        </div>     
     </main>
     <!-- Modal -->
     <div id="gameModal" class="modal">
@@ -303,3 +303,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
