--- a/index.html
+++ b/index.html
@@ -8,6 +8,71 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@500;600&display=swap" rel="stylesheet">
     <!-- Iconos con Font Awesome (sin espacios) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        /* Estilos para el botón de Telegram */
+        .boton-telegram {
+            background-color: #2AABEE; /* Color azul característico de Telegram */
+            color: white;
+            border: none;
+            padding: 8px 15px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: 600;
+            font-size: 14px;
+            margin-left: 15px; /* Espacio a la izquierda del botón */
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Sombra sutil */
+            transition: background-color 0.3s ease; /* Transición suave */
+        }
+
+        .boton-telegram:hover {
+            background-color: #1c9bd9; /* Color más oscuro al pasar el mouse */
+        }
+
+        .boton-telegram i {
+            margin-right: 5px; /* Espacio entre el ícono y el texto */
+        }
+
+        /* Asegurar que el header tenga espacio para los elementos */
+        header {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap; /* Permite que los elementos se muevan a la siguiente línea si no caben */
+            padding: 15px;
+        }
+
+        .search-container {
+            flex-grow: 1;
+            margin: 0 20px;
+            max-width: 500px; /* Limitar el ancho del buscador */
+        }
+
+        /* Ajustar el margen del selector de tema */
+        #theme-selector {
+            margin-left: 0; /* El margen ahora lo maneja el contenedor */
+        }
+
+        /* Media query para pantallas pequeñas */
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .search-container {
+                order: 3; /* Mueve el buscador al final en móviles */
+                width: 100%;
+                margin: 15px 0 0 0;
+            }
+
+            .boton-telegram {
+                margin-top: 10px; /* Espacio arriba en móviles */
+                margin-left: 0;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -16,12 +81,16 @@
             <input type="text" id="searchInput" placeholder="🔍 Buscar juegos...">
         </div>
         <!-- SELECTOR DE TEMA (Recuperado) -->
-        <div style="margin-left: 20px;">
+        <div style="display: flex; align-items: center;">
             <select id="theme-selector" onchange="changeTheme()">
                 <option value="">Oscuro</option>
                 <option value="light">Claro</option>
                 <option value="pixel">Pixel Art</option>
             </select>
+            <!-- Botón hacia el grupo de Telegram -->
+            <a href="ENLACE_DE_TU_GRUPO_DE_TELEGRAM" target="_blank" rel="noopener noreferrer" class="boton-telegram">
+                <i class="fab fa-telegram-plane"></i> Respaldo Juegos
+            </a>
         </div>
     </header>
     <main>
@@ -303,4 +372,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
