--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <option value="pixel">Pixel Art</option>
             </select>
             <!-- Botón hacia el grupo de Telegram -->
-            <a href="ENLACE_DE_TU_GRUPO_DE_TELEGRAM" target="_blank" rel="noopener noreferrer" class="boton-telegram">
+            <a href="https://web.telegram.org/k/#-4959297719" target="_blank" rel="noopener noreferrer" class="boton-telegram">
                 <i class="fab fa-telegram-plane"></i> Respaldo Juegos
             </a>
         </div>
@@ -372,3 +372,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
